--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -1,2 +1,27 @@
 <h1>Hello World</h1>
-<p>See Me in views/static/index.html.erb</p>
+
+<form method="post" action="/statuses">
+	<input type=text placeholder="Post a status!" name="status">
+	<input type="submit" value="submit">
+</form>
+
+My friends: 
+<%current_user.added_friends.each do |f|%>
+	<%= f.name %>
+<%end%>
+
+<br>
+<br>
+
+Suggested friends: 
+<%current_user.non_friends.each do |n|%>
+	<%if n != current_user%>
+		<%= n.name%>
+		<form method="post" action="/friendships">
+			<input type="hidden" name="friend_id" value="<%= n.id%>">
+			<input type="submit" value="Add friend">
+		</form>
+	<%end%>
+
+<%end%>
+
