--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -27,8 +27,13 @@
 	<h4>My friends:</h4>
 	<ul>
 		<%current_user.added_friends.each do |f|%>
-			<li><a href="/users/<%=f.id%>"><%= f.name %></a>
-		<%end%></li>
+			<li><a href="/users/<%=f.id%>"><%= f.name %></a> 
+			<form method="post" action="/destroyfriendships">
+				<input type="hidden" name="friend_id" value="<%=f.id%>">
+				<input type="hidden" name="current_user_id" value="<%=current_user.id%>">
+				<input type="submit" value="Unfriend">
+			</form></li>
+		<%end%>
 	</ul>
 
 
@@ -44,4 +49,25 @@
 			<%end%>
 		<%end%>
 	</ul>
+
 <%end%>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
