--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -12,43 +12,49 @@
 		<h2><%=current_user.statuses.last.status_text%></h2>
 	<%end%>
 
-	<h3>What my friends are feeling: </h3>
-	<ul>
-		<%current_user.added_friends.each do |f|%>
-			<%Status.all.each do |s|%> 
-				<%if s.user_id == f.id%>
-					<li><a href="/users/<%=f.id%>"><%= f.name %></a>: <a href="/statuses/<%=s.id%>"><%=s.status_text%></a></li>
+	<%if current_user.added_friends.length !=0 %>
+		<h3>What my friends are feeling: </h3>
+		<ul>
+			<%current_user.added_friends.each do |f|%>
+				<%Status.all.each do |s|%> 
+					<%if s.user_id == f.id%>
+						<li><a href="/users/<%=f.id%>"><%= f.name %></a>: <a href="/statuses/<%=s.id%>"><%=s.status_text%></a></li>
+					<%end%>
 				<%end%>
 			<%end%>
-		<%end%>
-	</ul>
+		</ul>
+	<%end%>
 
 
-	<h4>My friends:</h4>
-	<ul>
-		<%current_user.added_friends.each do |f|%>
-			<li><a href="/users/<%=f.id%>"><%= f.name %></a> 
-			<form method="post" action="/destroyfriendships">
-				<input type="hidden" name="friend_id" value="<%=f.id%>">
-				<input type="hidden" name="current_user_id" value="<%=current_user.id%>">
-				<input type="submit" value="Unfriend">
-			</form></li>
-		<%end%>
-	</ul>
-
-
-	<h4>Suggested friends:</h4>
-	<ul>
-		<%current_user.non_friends.each do |n|%>
-			<%if n != current_user%>
-				<li><a href="/users/<%=n.id%>"><%= n.name %></a>
-				<form method="post" action="/friendships">
-					<input type="hidden" name="friend_id" value="<%= n.id%>">
-					<input type="submit" value="Add friend">
+	<%if current_user.added_friends.length !=0 %>
+		<h4>My friends:</h4>
+		<ul>
+			<%current_user.added_friends.each do |f|%>
+				<li><a href="/users/<%=f.id%>"><%= f.name %></a> 
+				<form method="post" action="/destroyfriendships">
+					<input type="hidden" name="friend_id" value="<%=f.id%>">
+					<input type="hidden" name="current_user_id" value="<%=current_user.id%>">
+					<input type="submit" value="Unfriend">
 				</form></li>
 			<%end%>
-		<%end%>
-	</ul>
+		</ul>
+	<%end%>
+
+
+	<%if current_user.non_friends.length !=0 %>
+		<h4>Suggested friends:</h4>
+		<ul>
+			<%current_user.non_friends.each do |n|%>
+				<%if n != current_user%>
+					<li><a href="/users/<%=n.id%>"><%= n.name %></a>
+					<form method="post" action="/friendships">
+						<input type="hidden" name="friend_id" value="<%= n.id%>">
+						<input type="submit" value="Add friend">
+					</form></li>
+				<%end%>
+			<%end%>
+		</ul>
+	<%end%>
 
 <%end%>
 
